Sequential hashmap working; updated common.h; other quality-of-life updates to other files

--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -Wextra -Werror -Wwrite-strings
+CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread
 OPT = -O3
 
 all: test_cache
@@ -8,16 +8,19 @@ common:
 	$(CC) $(CFLAGS) $(OPT) -c common.h
 
 # Need to add pre-reqs when I make the other files
-sequential: common.o
-	$(CC) $(CFLAGS) $(OPT) -c sequential.cpp
+# sequential: common.o
+# 	$(CC) $(CFLAGS) $(OPT) -c sequential.cpp
 
-concurrent: common.o
-	$(CC) $(CFLAGS) $(OPT) -c concurrent.cpp
+# concurrent: common.o
+# 	$(CC) $(CFLAGS) $(OPT) -c concurrent.cpp
 
-transactional: common.o
-	$(CC) $(CFLAGS) $(OPT) -c transactional.cpp
+# transactional: common.o
+# 	$(CC) $(CFLAGS) $(OPT) -c transactional.cpp
 
-test_cache: sequential.o concurrent.o transactional.o test_cache.cpp
+dummy: common.o
+	$(CC) $(CFLAGS) $(OPT) -c dummy.cpp
+
+test_cache: dummy.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -o test_cache test_cache.cpp
 
 # Add executable file names here as I make them
