Range queries now work and have been added to the test suite

--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread
+CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread -g
 OPT = -O3
 
 all: test_cache
@@ -17,10 +17,10 @@ common:
 # transactional: common.o
 # 	$(CC) $(CFLAGS) $(OPT) -c transactional.cpp
 
-dummy: common.o
-	$(CC) $(CFLAGS) $(OPT) -c dummy.cpp
+traditional: common.o
+	$(CC) $(CFLAGS) $(OPT) -c seq_trad_hashmap.cpp
 
-test_cache: dummy.o test_cache.cpp
+test_cache: seq_trad_hashmap.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -o test_cache test_cache.cpp
 
 # Add executable file names here as I make them
