Finsihed range query

--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -1,8 +1,8 @@
 CC = g++
-CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread
+CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread -std=c++14
 OPT = -O3
 
-all: test_cache
+all: test_cache linear
 
 common:
 	$(CC) $(CFLAGS) $(OPT) -c common.h
@@ -23,8 +23,12 @@ dummy: common.o
 test_cache: dummy.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -o test_cache test_cache.cpp
 
+linear: dummy.o test_cache.cpp
+	$(CC) $(CFLAGS) $(OPT) -c linear.cpp
+
 # Add executable file names here as I make them
 clean:
+	rm -f *.o linear
 	rm -f *.o test_cache
 
 test: clean test_cache
