--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -20,7 +20,10 @@ common:
 traditional: common.o
 	$(CC) $(CFLAGS) $(OPT) -c seq_trad_hashmap.cpp
 
-test_cache: seq_trad_hashmap.o test_cache.cpp
+art: common.o
+	$(CC) $(CFLAGS) $(OPT) -c adaptive_radix_trie.cpp
+
+test_cache: adaptive_radix_trie.o seq_trad_hashmap.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -o test_cache test_cache.cpp
 
 # Add executable file names here as I make them
