adding commit to see diff with wrapper class

--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -2,7 +2,7 @@ CC = g++
 CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread -std=c++17 -g
 OPT = -O3
 
-all: test_cache hopscotch
+all: test_cache hopscotch hopscotch_v2
 
 common:
 	$(CC) $(CFLAGS) $(OPT) -c common.h
@@ -30,13 +30,17 @@ linear: dummy.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -c linear.cpp
 
 hopscotch: test_cache.cpp
-	$(CC) $(CFLAGS) $(OPT) -o hopscotch -c hopscotch_v2.cpp
+	$(CC) $(CFLAGS) $(OPT) -c HopscotchWrapper.cpp
+
+hopscotch_v2: HopscotchWrapper.o
+	$(CC) $(CFLAGS) $(OPT) -o hopscotch_v2 -c hopscotch_v2.cpp
 
 # Add executable file names here as I make them
 clean:
 	rm -f *.o linear
 	rm -f *.o test_cache
 	rm -f *.o hopscotch
+	rm -f *.o hopscotch_v2
 
 test: clean test_cache
 	./test_cache -t 1 -v sequ
