changes up to meeting w roberto

--- a/experiment/Makefile
+++ b/experiment/Makefile
@@ -2,7 +2,7 @@ CC = g++
 CFLAGS = -Wall -Wextra -Werror -Wwrite-strings -pthread -std=c++17 -g
 OPT = -O3
 
-all: test_cache hopscotch hopscotch_v2
+all: test_cache hopscotch
 
 common:
 	$(CC) $(CFLAGS) $(OPT) -c common.h
@@ -29,11 +29,12 @@ test_cache: seq_trad_hashmap.o concurr_trad_hashmap.o test_cache.cpp
 linear: dummy.o test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -c linear.cpp
 
-hopscotch: test_cache.cpp
+hopscotch_v2: test_cache.cpp
+	$(CC) $(CFLAGS) $(OPT) -o hopscotch_v2 -c hopscotch_v2.h
+
+hopscotch: hopscotch_v2 test_cache.cpp
 	$(CC) $(CFLAGS) $(OPT) -c HopscotchWrapper.cpp
 
-hopscotch_v2: HopscotchWrapper.o
-	$(CC) $(CFLAGS) $(OPT) -o hopscotch_v2 -c hopscotch_v2.cpp
 
 # Add executable file names here as I make them
 clean:
